change ui color for tu duong

--- a/_layouts/family_tree.html
+++ b/_layouts/family_tree.html
@@ -21,18 +21,16 @@
       <div class="tablet-decoration"></div>
     </div>
 
-    <!-- Câu đối hai bên -->
+    <!-- Câu đối hai bên - chỉ giữ chữ Hán -->
     <div class="parallel-couplet left-couplet">
       <div class="couplet-text">
-        <p class="chinese">祖德流芳思木本</p>
-        <p class="vietnamese">Tổ đức lưu phương tư mộc bản</p>
+        <p class="chinese">{{ page.left_couplet_chinese }}</p>
       </div>
     </div>
 
     <div class="parallel-couplet right-couplet">
       <div class="couplet-text">
-        <p class="chinese">宗功浩大想水源</p>
-        <p class="vietnamese">Tông công hạo đại tưởng thủy nguyên</p>
+        <p class="chinese">{{ page.right_couplet_chinese }}</p>
       </div>
     </div>
 
